<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Payment Details</string>
    <string name="_300_credit_prize_ticket_game_card">300 Credit Prize/ticket Game Card</string>
    <string name="credits_100_00">Credits - $100.00</string>
    <string name="price">Price</string>
    <string name="_100">$100</string>
    <string name="tax">Tax</string>
    <string name="_0_00">$0.00</string>
    <string name="total_net_amount">Total Net Amount</string>
    <string name="_100_00">$100.00</string>
    <string name="select_payment_mode">Select Payment Mode</string>
    <string name="online_payeezy">Online Payeezy</string>
    <string name="cash">Cash</string>
    <string name="stripe">Stripe</string>
    <string name="visa">VISA</string>
    <string name="american_express">American Express</string>
    <string name="master_card">Master Card</string>
    <string name="pay_now">PAY NOW</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="sandhya">Sandhya</string>
    <string name="_123456789">+123456789</string>
    <string name="sandhyapd_gmail_com">sandhya@gmail.com</string>
    <string name="about_app">About App</string>
    <string name="build_version">Build Version</string>
    <string name="_2_110_8">2.110.8</string>
    <string name="application_name">Application name</string>
    <string name="smartfun">Smartfun</string>
    <string name="designed_developed_by"><![CDATA[Designed & Developed By]]></string>
    <string name="semnox_solutions_private_limited">Semnox Solutions Private Limited.</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="cards">Cards</string>
    <string name="play">Play</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="img">img</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="p_d">P D</string>
    <string name="email">Email</string>
    <string name="sandhyapd_gamilcom">sandhyapd@gamilcom</string>
    <string name="mobile_no">Mobile No</string>
    <string name="_919483915643">919483915643</string>
    <string name="sign_up_to_smartfun">SIGN UP TO SMARTFUN</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="login"><u>LOGIN</u></string>
    <string name="todo">TODO</string>
    <string name="last_name">Last Name</string>
    <string name="login_to_smartfun">Login to Smartfun</string>
    <string name="phone_number_or_email">Phone Number Or Email</string>
    <string name="generate_otp_to_login">GENERATE OTP TO LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="recharge">Recharge</string>
    <string name="fdef8f43">FDEF8F43</string>
    <string name="location">Location</string>
    <string name="semnox_bangalore">Semnox Bangalore</string>
    <string name="new_card_sites">New Card Sites</string>
    <string name="new_playpass">New Playpass</string>
    <string name="playpass_activation">Playpass Activation</string>
    <string name="recharge_10">Recharge 10</string>
    <string name="sign_upcaps"><u>Sign Up</u></string>
    <string name="_10">$10</string>
    <string name="blr_game_timer_20">Blr Game Timer 20</string>
    <string name="_20">$20</string>
    <string name="recharge_50">Recharge 50</string>
    <string name="_50">$50</string>
    <string name="continue_to_pay_10">Continue to pay - $10</string>
    <string name="a7ec7fc1">A7EC7FC1</string>
    <string name="credits">Credits</string>
    <string name="_158">158</string>
    <string name="issue_date_01_nov_2021">Issue Date:01 Nov 2021</string>
    <string name="_152">152</string>
    <string name="bonus">Bonus</string>
    <string name="_68">68</string>
    <string name="tickets">Tickets</string>
    <string name="_50tickets">50</string>
    <string name="_0">0</string>
    <string name="time">Time</string>
    <string name="courtesy">Courtesy</string>
    <string name="activities">Activities</string>
    <string name="game_plays">Game Plays</string>
    <string name="loyal_points">Loyal Points</string>
    <string name="transfer_credits">Transfer Credits</string>
    <string name="link_card">Link Card</string>
    <string name="lost_card">Lost Card</string>
    <string name="new_card">+ New Card</string>
    <string name="card_no">Card No</string>
    <string name="bangalore">Bangalore</string>
    <string name="latest_activities">Latest Activities</string>
    <string name="oct_23_2021_bangalore">OCT 23,2021 | BANGALORE</string>
    <string name="transaction_refund_card">TRANSACTION REFUND CARD</string>
    <string name="amt_credits"><b>200</b> Credits</string>
    <string name="reference_112382">Reference:112382</string>
    <string name="_12_19_pm">12:19 pm</string>
    <string name="_11_16_am">11:16 am</string>
    <string name="oct_22_2021_bangalore">OCT 22,2021 | BANGALORE</string>
    <string name="payment">PAYMENT</string>
    <string name="_99_credits">-99 Credits</string>
    <string name="_10_16_am">10:16 am</string>
    <string name="_100_credits">100 Credits</string>
    <string name="_3_15_pm">3:15 pm</string>
    <string name="textview">TextView</string>
    <string name="play_game">Play Game</string>

    <string-array name="programming_languages">
        <item >Semnox Bangalore</item>
        <item>Semnox Mangalore</item>
        <item>Sandhya Laptop</item>
        <item>Nitin Laptop</item>
    </string-array>

</resources>