<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Theme.Design.Light.NoActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_arrow">


    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/child"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik"
        android:text="@string/sign_up"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/child" />

    <ImageView
        android:id="@+id/first_logo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="42dp"
        android:src="@drawable/blackhat"
        app:layout_constraintRight_toLeftOf="@id/man_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/man_logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/manlogo"
        app:layout_constraintRight_toLeftOf="@id/main_img"
        app:layout_constraintStart_toEndOf="@id/first_logo"
        app:layout_constraintTop_toBottomOf="@id/signup"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/main_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup"
        app:srcCompat="@drawable/account_logo"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageViewcircle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="14dp"
        android:layout_marginStart="2dp"
        android:background="@drawable/image_circle"
        android:contentDescription="@string/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/woman_logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/womanlogo"
        app:layout_constraintRight_toLeftOf="@id/black_hat"
        app:layout_constraintStart_toEndOf="@id/imageViewcircle"
        app:layout_constraintTop_toBottomOf="@id/signup"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/black_hat"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="42dp"
        android:src="@drawable/blackhat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/woman_logo"
        app:layout_constraintTop_toBottomOf="@id/signup"
        tools:ignore="ContentDescription" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/first_name"
        android:textColor="#000000"
        android:textColorHint="#666666"
        android:textSize="12sp"
        app:hintTextColor="#666666"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_img">

        <com.google.android.material.textfield.TextInputEditText

            android:backgroundTint="#F3F5F5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:text="@string/sandhya"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/last_name"
        android:textColor="#000000"
        android:textColorHint="#666666"
        app:hintTextColor="#666666"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textField">

        <com.google.android.material.textfield.TextInputEditText
            android:background="#F3F5F5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:text="@string/p_d"
            android:textColor="@color/black"
            android:textSize="16sp" />



    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_textField"
        app:hintTextColor="#666666"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        android:textColor="#000000"
        android:textColorHint="#666666"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F3F5F5"
            android:fontFamily="@font/rubik"
            android:text="@string/sandhyapd_gamilcom"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="DuplicateClickableBoundsCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:layout_marginTop="32dp"
        android:hint="@string/mobile_no"
        android:textColor="#000000"
        android:textColorHint="#666666"
        app:hintTextColor="#666666"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_textField">

        <com.google.android.material.textfield.TextInputEditText
            android:background="#F3F5F5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:text="@string/_919483915643"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/singup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/sign_up_to_smartfun"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/check_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/rubik"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/login"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/singup_btn"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/rubik"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/login"
        android:textColor="#8C00F3"
        app:layout_constraintBaseline_toBaselineOf="@+id/check_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/check_account" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--            app:errorEnabled="true"-->
    <!--            app:errorContentDescription="Please enter valid email"-->